--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c289ab">  <td>24/03/15 02:03:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:storeApp.ShopStoreApp@479d31f3]">&gt;&gt;startAppiumServer</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1578009262</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/15 02:03:22</td>   <td>9120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.LoginStoreTest()[pri:1, instance:storeApp.ShopStoreApp@479d31f3]">LoginStoreTest</td> 
-  <td>main@1578009262</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/15 02:03:30</td>   <td>16771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.addItemToCart()[pri:2, instance:storeApp.ShopStoreApp@479d31f3]">addItemToCart</td> 
-  <td>main@1578009262</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/15 02:03:44</td>   <td>30693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.CartProductList()[pri:4, instance:storeApp.ShopStoreApp@479d31f3]">CartProductList</td> 
-  <td>main@1578009262</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/15 02:03:33</td>   <td>20239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.scrollToItemTest()[pri:3, instance:storeApp.ShopStoreApp@479d31f3]">scrollToItemTest</td> 
-  <td>main@1578009262</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/16 10:43:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:pagesTest.LongPress@7714e963]">&gt;&gt;startAppiumServer</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348984985</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/16 10:44:31</td>   <td>70632</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:pagesTest.LongPress@7714e963]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348984985</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>24/03/16 10:44:13</td>   <td>52799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LongPress.longPressTest()[pri:0, instance:pagesTest.LongPress@7714e963]">longPressTest</td> 
+  <td>main@348984985</td>   <td></td> </tr>
 </table>
