Refactor Common Actions into Methods

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-89168300\testng-customsuite.xml</span>
+                    <span>C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-2112031279\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pagesTest.LongPress" class="method navigator-link" hash-for-method="longPressTest">longPressTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="pagesTest.GetTextFromApp" class="method navigator-link" hash-for-method="extractTextFromAppiumElement">extractTextFromAppiumElement</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,16 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">pagesTest.LongPress</span>
+              <span class="class-name">pagesTest.GetTextFromApp</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="longPressTest">
-                  </a> <!-- longPressTest -->
-                  <span class="method-name">longPressTest</span>
-                  <em>
-(Perform a long press action on an element)                  </em>
+                  <a name="extractTextFromAppiumElement">
+                  </a> <!-- extractTextFromAppiumElement -->
+                  <span class="method-name">extractTextFromAppiumElement</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -139,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-89168300\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-2112031279\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;pagesTest.LongPress&quot;/&gt;
+      &lt;class name=&quot;pagesTest.GetTextFromApp&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'longPressTest')
-data.setCell(0, 2, 'pagesTest.LongPress')
-data.setCell(0, 3, 12318);
+data.setCell(0, 1, 'extractTextFromAppiumElement')
+data.setCell(0, 2, 'pagesTest.GetTextFromApp')
+data.setCell(0, 3, 3623);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">pagesTest.LongPress</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">pagesTest.GetTextFromApp</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">startAppiumServer</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">longPressTest</span>
-                <span class="method-start">16949 ms</span>
+                <span class="method-name">extractTextFromAppiumElement</span>
+                <span class="method-start">15982 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">29279 ms</span>
+                <span class="method-start">19609 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
