--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6172a4">  <td>24/03/16 15:21:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetTextFromApp.extractTextFromAppiumElement()[pri:0, instance:pagesTest.GetTextFromApp@5fdcaa40]">extractTextFromAppiumElement</td> 
-  <td>main@96406857</td>   <td></td> </tr>
-<tr bgcolor="c289ab">  <td>24/03/16 15:21:21</td>   <td>-15977</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:pagesTest.GetTextFromApp@5fdcaa40]">&gt;&gt;startAppiumServer</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@96406857</td>   <td></td> </tr>
-<tr bgcolor="c289ab">  <td>24/03/16 15:21:41</td>   <td>3628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:pagesTest.GetTextFromApp@5fdcaa40]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@96406857</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/17 01:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:storeShopTest.SwipeDemo@67c27493]">&gt;&gt;startAppiumServer</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@615438348</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>24/03/17 01:13:11</td>   <td>21236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SwipeDemo.swipeTest()[pri:0, instance:storeShopTest.SwipeDemo@67c27493]">swipeTest</td> 
+  <td>main@615438348</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/17 01:13:22</td>   <td>32852</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:storeShopTest.SwipeDemo@67c27493]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@615438348</td>   <td></td> </tr>
 </table>
