--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">33 422</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">77 545</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">storeShopTest.SwipeDemo</td><td><a href="#m0">swipeTest</a></td><td rowspan="1">1710634391116</td><td rowspan="1">11610</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">storeShopTest.ShopStoreApp</td><td><a href="#m0">CartProductListTest</a></td><td rowspan="1">1710635247381</td><td rowspan="1">12622</td></tr><tr class="passedeven"><td><a href="#m1">LoginStoreTest</a></td><td rowspan="1">1710635206535</td><td rowspan="1">25254</td></tr><tr class="passedeven"><td><a href="#m2">addItemToCartTest</a></td><td rowspan="1">1710635231795</td><td rowspan="1">4082</td></tr><tr class="passedeven"><td><a href="#m3">scrollToItemTest</a></td><td rowspan="1">1710635235880</td><td rowspan="1">11495</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">storeShopTest.SwipeDemo#swipeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">storeShopTest.ShopStoreApp#CartProductListTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">storeShopTest.ShopStoreApp#LoginStoreTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">storeShopTest.ShopStoreApp#addItemToCartTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">storeShopTest.ShopStoreApp#scrollToItemTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
