--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-1198437284\testng-customsuite.xml</span>
+                    <span>C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse--1741218401\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="storeShopTest.ShopStoreApp" class="method navigator-link" hash-for-method="CartProductListTest">CartProductListTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="storeShopTest.ShopStoreApp" class="method navigator-link" hash-for-method="LoginStoreTest">LoginStoreTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="storeShopTest.ShopStoreApp" class="method navigator-link" hash-for-method="addItemToCartTest">addItemToCartTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="storeShopTest.ShopStoreApp" class="method navigator-link" hash-for-method="scrollToItemTest">scrollToItemTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="storeShopTest.ToastMessageTest" class="method navigator-link" hash-for-method="toastMsgTest">toastMsgTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,41 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">storeShopTest.ShopStoreApp</span>
+              <span class="class-name">storeShopTest.ToastMessageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CartProductListTest">
-                  </a> <!-- CartProductListTest -->
-                  <span class="method-name">CartProductListTest</span>
-                  <em>
-(Count the number of items in the cart)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LoginStoreTest">
-                  </a> <!-- LoginStoreTest -->
-                  <span class="method-name">LoginStoreTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="addItemToCartTest">
-                  </a> <!-- addItemToCartTest -->
-                  <span class="method-name">addItemToCartTest</span>
-                  <em>
-(Add items to the shopping cart and verify successful addition)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="scrollToItemTest">
-                  </a> <!-- scrollToItemTest -->
-                  <span class="method-name">scrollToItemTest</span>
-                  <em>
-(Scroll to the item with specific text and select it)                  </em>
+                  <a name="toastMsgTest">
+                  </a> <!-- toastMsgTest -->
+                  <span class="method-name">toastMsgTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -179,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse-1198437284\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\TOPINFORMATIQUE\AppData\Local\Temp\testng-eclipse--1741218401\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;storeShopTest.ShopStoreApp&quot;/&gt;
+      &lt;class name=&quot;storeShopTest.ToastMessageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -228,28 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginStoreTest')
-data.setCell(0, 2, 'storeShopTest.ShopStoreApp')
-data.setCell(0, 3, 25254);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'CartProductListTest')
-data.setCell(1, 2, 'storeShopTest.ShopStoreApp')
-data.setCell(1, 3, 12622);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'scrollToItemTest')
-data.setCell(2, 2, 'storeShopTest.ShopStoreApp')
-data.setCell(2, 3, 11495);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'addItemToCartTest')
-data.setCell(3, 2, 'storeShopTest.ShopStoreApp')
-data.setCell(3, 3, 4082);
+data.setCell(0, 1, 'toastMsgTest')
+data.setCell(0, 2, 'storeShopTest.ToastMessageTest')
+data.setCell(0, 3, 17683);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 53 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -275,30 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">storeShopTest.ShopStoreApp</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">storeShopTest.ToastMessageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">startAppiumServer</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginStoreTest</span>
-                <span class="method-start">23420 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addItemToCartTest</span>
-                <span class="method-start">48680 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">scrollToItemTest</span>
-                <span class="method-start">52765 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">CartProductListTest</span>
-                <span class="method-start">64266 ms</span>
+                <span class="method-name">toastMsgTest</span>
+                <span class="method-start">18829 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">76890 ms</span>
+                <span class="method-start">36516 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
