--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6172a4">  <td>24/03/17 01:27:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.CartProductListTest()[pri:4, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">CartProductListTest</td> 
-  <td>main@2014838114</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/17 01:26:46</td>   <td>-40846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.LoginStoreTest()[pri:1, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">LoginStoreTest</td> 
-  <td>main@2014838114</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/17 01:27:11</td>   <td>-15586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.addItemToCartTest()[pri:2, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">addItemToCartTest</td> 
-  <td>main@2014838114</td>   <td></td> </tr>
-<tr bgcolor="6172a4">  <td>24/03/17 01:27:15</td>   <td>-11501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopStoreApp.scrollToItemTest()[pri:3, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">scrollToItemTest</td> 
-  <td>main@2014838114</td>   <td></td> </tr>
-<tr bgcolor="c289ab">  <td>24/03/17 01:26:23</td>   <td>-64261</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">&gt;&gt;startAppiumServer</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2014838114</td>   <td></td> </tr>
-<tr bgcolor="c289ab">  <td>24/03/17 01:27:40</td>   <td>12624</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:storeShopTest.ShopStoreApp@5b8dfcc1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2014838114</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/17 19:37:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.startAppiumServer()[pri:0, instance:storeShopTest.ToastMessageTest@67c27493]">&gt;&gt;startAppiumServer</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@615438348</td>   <td></td> </tr>
+<tr bgcolor="c289ab">  <td>24/03/17 19:38:13</td>   <td>36513</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:storeShopTest.ToastMessageTest@67c27493]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@615438348</td>   <td></td> </tr>
+<tr bgcolor="6172a4">  <td>24/03/17 19:37:55</td>   <td>18826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToastMessageTest.toastMsgTest()[pri:0, instance:storeShopTest.ToastMessageTest@67c27493]">toastMsgTest</td> 
+  <td>main@615438348</td>   <td></td> </tr>
 </table>
